provision/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hahoang-svc
spec:
  selector:
    app: hahoang
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: LoadBalancer
